force-app/main/default/objects/FLODocs__StrongpointObjPermission__c/FLODocs__StrongpointObjPermission__c.object-meta.xml
<CustomObject>
    <description>Object used to save all data of ObjectPermission Sales Force entity.</description>
    <label>StrongpointObjPermission</label>
    <nameField>
        <displayFormat>SOP-{0000}</displayFormat>
        <label>StrongpointObjPermission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>StrongpointObjPermissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>