force-app/main/default/objects/FLODocs__StrongpointObjPermission__c/fields/FLODocs__ObjectPermissionId__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__ObjectPermissionId__c</fullName>
    <label>ObjectPermissionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>