force-app/main/default/objects/FLODocs__StrongpointObjPermission__c/fields/FLODocs__StrongpointObjPermissionDelete__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__StrongpointObjPermissionDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete</label>
    <type>Checkbox</type>
</CustomField>