force-app/main/default/objects/FLODocs__StrongpointObjPermission__c/fields/FLODocs__StrongpointObjPermissionEdit__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__StrongpointObjPermissionEdit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Edit</label>
    <type>Checkbox</type>
</CustomField>