force-app/main/default/objects/FLODocs__StrongpointObjPermission__c/fields/FLODocs__StrongpointObjPermissionProfile__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__StrongpointObjPermissionProfile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Permission</label>
    <referenceTo>FLODocs__FLO_Customization__c</referenceTo>
    <relationshipLabel>StrongpointObjPermissions (StrongpointObjPermissionProfile)</relationshipLabel>
    <relationshipName>StrongpointObjPermissions1</relationshipName>
    <type>Lookup</type>
</CustomField>